Code Style and Java API Updates